- cache-buster for testpage retrieval & results submission
- jsUnitRestoredHTMLDiv
- turn off tracing, alerts, confirms when submitting
- testPage parameter should be URL-encoded (only opera cares though)
- Speed-up of Firefox/Mozilla (thanks to Chris Wesseling)
- jsUnitMockTimeout.js (thanks to Pivotal, especially Nathan Wilmes)
- new "Stop" button for stopping test runs

SERVER
- start-browser scripts in bin
- Migration of Java code to require Java 5.0
- StandaloneTest and DistributedTest continue on after a failure in a particular browser or remote server respectively
- StandaloneTest has a suite() method that makes the test run have multiple JUnit tests, one per browser
- DistribuedTest has a suite() method that makes the test run have multiple JUnit tests, one per remote machine URL
- Change to XML output format of test runs to include more information and be more hierarchical (machine->browser->test page->test case)
- Logs are now prefixed with "JSTEST-" in order to match JUnit's "TEST-"
- Logs now contain the browser ID (e.g. JSTEST-12345.5.xml means browser with ID 5); displayer servlet now takes an id and a browserId parameter
- added support for launching the default system browser on Windows and UNIX (see the constant on net.jsunit.StandaloneTest)
- StandaloneTest now runs tests in all specified browsers, even after an earlier browser failed
- New "config" servlet that shows the configuration as XML of the server
- Distributed Tests now send back an XML document that includes the XML for browser results as opposed to just a "success"/"failure" node
- runner servlet takes a "url" querystring parameter that overrides the server's url property
- test run requests to the JsUnitServer are queued up and in serial so that different clients don't step on eachother
- addition of new configuration parameter, "closeBrowsersAfterTestRuns", for whether to attempt to close browsers after test runs